--- a/_posts/2018-07-07-cvs.md
+++ b/_posts/2018-07-07-cvs.md
@@ -26,11 +26,12 @@ that the question was uninteresting.
 
 Git itself is not much older than Github. Linus Torvalds released the first
 version of Git in 2005. Though today younger developers might have a hard time
-conceiving of a world where the term "version control software" didn't just
-mean Git, such a world existed not so long ago. There were lots of alternatives
-to choose from. Open source developers preferred Subversion, enterprises and
-video game companies used Perforce (some still do), while the Linux kernel
-project famously relied on a version control system called BitKeeper.
+conceiving of a world where the term "version control software" didn't more or
+less just mean Git, such a world existed not so long ago. There were lots of
+alternatives to choose from. Open source developers preferred Subversion,
+enterprises and video game companies used Perforce (some still do), while the
+Linux kernel project famously relied on a version control system called
+BitKeeper.
 
 Some of these systems, particularly BitKeeper, might feel familiar to a young
 Git user transported back in time. Most would not. BitKeeper aside, the version
