Better description for cvs post.

--- a/_posts/2018-07-07-cvs.md
+++ b/_posts/2018-07-07-cvs.md
@@ -1,7 +1,8 @@
 ---
 title: Version Control Before Git with CVS
 description: >
-    What it was like using version control before Git.
+    What it was like using version control before distributed repositories and
+    commit graphs.
 excerpt: >
     Github was launched in 2008. If your software engineering career, like
     mine, is no older than Github, then Git may be the only version control
