cvs post typo: intuitive -> unintuitive

--- a/_posts/2018-07-07-cvs.md
+++ b/_posts/2018-07-07-cvs.md
@@ -7,7 +7,7 @@ excerpt: >
     Github was launched in 2008. If your software engineering career, like
     mine, is no older than Github, then Git may be the only version control
     software you have ever used. While people sometimes grouse about its steep
-    learning curve or intuitive interface, Git has become everyone's go-to
+    learning curve or unintuitive interface, Git has become everyone's go-to
     for version control. In Stack Overflow's 2015 developer survey, 69.3% of
     respondents used Git, almost twice as many as used the second-most-popular
     version control system, Subversion. After 2015, Stack Overflow stopped
@@ -18,7 +18,7 @@ excerpt: >
 Github was launched in 2008. If your software engineering career, like mine, is
 no older than Github, then Git may be the only version control software you
 have ever used. While people sometimes grouse about its steep learning curve or
-intuitive interface, Git has become everyone's go-to for version control. In
+unintuitive interface, Git has become everyone's go-to for version control. In
 Stack Overflow's 2015 developer survey, 69.3% of respondents used Git, almost
 twice as many as used the second-most-popular version control system,
 Subversion.[^1] After 2015, Stack Overflow stopped asking developers about the
