Add correction to CVS article.

--- a/_posts/2018-07-07-cvs.md
+++ b/_posts/2018-07-07-cvs.md
@@ -82,7 +82,7 @@ I've really enjoyed playing around with CVS. I think there's no better way to
 understand why Git's distributed nature is such an improvement on what came
 before. So I invite you to come along with me on an exciting journey and
 spend the next ten minutes of your life learning about a piece of software
-nobody has used in the last decade.
+nobody has used in the last decade. (_See [correction](#correction)._)
 
 ## Getting Started with CVS
 Instructions for installing CVS can be found on the [project's
@@ -482,8 +482,17 @@ today.
 
 {% include subscribe.html %}
 
+### Correction
+I've been told that there are many organizations, particularly risk-adverse
+organizations that do things like make medical device software, that still use
+CVS. Programmers in these organizations have developed little tricks for
+working around CVS' limitations, such as making a new branch for almost every
+change to avoid committing directly to `HEAD`. (Thanks to Michael Kohne for
+pointing this out.)
+
 [^1]: "2015 Developer Survey," Stack Overflow, accessed July 7, 2018, <https://insights.stackoverflow.com/survey/2015#tech-sourcecontrol>.
 [^2]: Eric Sink, "A History of Version Control," Version Control By Example, 2011, accessed July 7, 2018, <https://ericsink.com/vcbe/html/history_of_version_control.html>.
 [^3]: Dick Grune, "Concurrent Versions System CVS," dickgrune.com, accessed July 7, 2018, <https://dickgrune.com/Programs/CVS.orig/#History>.
 [^4]: "Tech Talk: Linus Torvalds on Git," YouTube, May 14, 2007, accessed July 7, 2018, <https://www.youtube.com/watch?v=4XpnKHJAok8>.
 [^5]: "Concurrent Versions System - News," Savannah, accessed July 7, 2018, <http://savannah.nongnu.org/news/?group=cvs>.
+
