Add tags to index and posts.

--- a/_posts/2018-07-07-cvs.md
+++ b/_posts/2018-07-07-cvs.md
@@ -13,6 +13,7 @@ excerpt: >
     version control system, Subversion. After 2015, Stack Overflow stopped
     asking developers about the version control systems they use, perhaps
     because Git had become so popular that the question was uninteresting.
+tags: ['Tools']
 ---
 
 Github was launched in 2008. If your software engineering career, like mine, is
