--- a/_posts/2018-10-14-lisp.md
+++ b/_posts/2018-10-14-lisp.md
@@ -276,7 +276,7 @@ _The cover art for SICP._
 Honestly, what is going on here? Why does the table have animal feet? Why is
 the woman gesturing at the table? What is the significance of the inkwell? Are
 we supposed to conclude that the wizard has unlocked the hidden mysteries of
-the universe, and that those mysterious consist of the "eval/apply" loop and
+the universe, and that those mysteries consist of the "eval/apply" loop and
 the Lambda Calculus? It would seem so. This image alone must have done an
 enormous amount to shape how people talk about Lisp today.
 
