Fix awkward double indeed.

--- a/_posts/2018-11-12-cat.md
+++ b/_posts/2018-11-12-cat.md
@@ -253,8 +253,8 @@ another language. (Though C has already been around for fifty years, and it
 doesn't look like it is about to be replaced any time soon.) But barring all 
 that, why not just keep using the `cat` we have forever?
 
-I think the history of `cat` shows that some ideas in computer science are very
-durable indeed. Indeed, with `cat`, both the idea and the program itself are
+I think the history of `cat` shows that some ideas in computer science are in
+fact very durable. Indeed, with `cat`, both the idea and the program itself are
 old. It may not be accurate to say that the `cat` on my computer is from 1969.
 But I could make a case for saying that the `cat` on my computer is from 1989,
 when Fall wrote his implementation of `cat`. Lots of other software is just as
