--- a/_posts/2019-03-31-bbc-micro.md
+++ b/_posts/2019-03-31-bbc-micro.md
@@ -89,7 +89,7 @@ office work. In late 1979, it was decided that the BBC should make a ten-part
 TV series that would help regular Britons "learn how to use and control
 computers and not feel dominated by them."[^5] The project eventually became a
 multimedia endeavor similar to the _Adult Literacy Project_, an earlier BBC
-undertaking that involved a TV series and supplemental courses and helped
+undertaking involving both a TV series and supplemental courses that helped
 two million people improve their reading.
 
 The producers behind the _Computer Literacy Project_ were keen for
