Add Vice News note to RSS post.

--- a/_posts/2018-12-18-rss.md
+++ b/_posts/2018-12-18-rss.md
@@ -19,6 +19,9 @@ _posts/2018-09-16-the-rise-and-demise-of-rss.md %}). What follows is a revision
 that includes additional information gleaned from interviews with Ramanathan
 Guha, Ian Davis, Dan Libby, and Kevin Werbach._
 
+_A version of this post was also published by [Vice
+News](https://www.vice.com/en_us/article/a3mm4z/the-rise-and-demise-of-rss)._
+
 About a decade ago, the average internet user might well have heard of RSS.
 Really Simple Syndication, or Rich Site Summary—what the acronym stands for
 depends on who you ask—is a standard that websites and podcasts can use to
@@ -98,7 +101,7 @@ that participating websites were supposed to add to their interfaces. A little
 box containing a list of linked headlines would then appear.
 
 ![A My Netscape Network Channel](/images/mnn-channel.gif)
-_A My Netscape Network channel for Mozilla.org, as it might look to users 
+_A My Netscape Network channel for Mozilla.org, as it might look to users
 <br/> about to add it to their My Netscape page._
 
 The special file that participating websites had to publish was an RSS file. In
@@ -331,13 +334,13 @@ To this, Winer said:
 > say anything about it being called RSS 1.0. I spoke on the phone with Rael
 > the Friday before it was announced, again he didn't say that they were
 > calling it RSS 1.0. The first I found out about it was when it was publicly
-> announced. 
-> 
+> announced.
+>
 > Let me ask you a straight question. If it turns out that the plan to call the
 > new spec "RSS 1.0" was done in private, without any heads-up or consultation,
 > or for a chance for the Syndication list members to agree or disagree, not
 > just me, what are you going to do?
-> 
+>
 > UserLand did a lot of work to create and popularize and support RSS. We
 > walked away from that, and let your guys have the name. That's the top level.
 > If I want to do any further work in Web syndication, I have to use a
@@ -450,7 +453,7 @@ of assembling different elements of things into sites." But, on another level,
 "the whole social media revolution is partly about the ability to aggregate
 different content and resources" in a manner reminiscent of RSS and his
 original vision for a syndicated web. To Werbach, "it's the legacy of RSS, even
-if it's not built on RSS." 
+if it's not built on RSS."
 
 Unfortunately, syndication on the modern web still only happens through one of
 a very small number of channels, meaning that none of us "retain control over
