Add translation metadata to four posts.

--- a/_posts/2018-11-12-cat.md
+++ b/_posts/2018-11-12-cat.md
@@ -4,6 +4,9 @@ year: 1969
 tags: ['Tools']
 description: >
     A tour of the many historical implementations of the Unix cat utility.
+translations:
+    - language: 'Mandarin (Simplified)'
+      url: 'https://github.com/jobbole/translation-project/blob/trans/translation/37-the-source-history-of-ca.md'
 ---
 I once had a debate with members of my extended family about whether a computer
 science degree is a degree worth pursuing. I was in college at the time and
@@ -106,8 +109,8 @@ modes](https://en.wikipedia.org/wiki/PDP-11_architecture#Addressing_modes). (If
 you are confused by the parentheses and dollar signs in the source code, those
 are used to indicate different addressing modes.) But it also leverages the `;`
 character and temporary labels just like the first version of `cat`, meaning
-that these features must have been retained when `as` was adapted for the 
-PDP 11. 
+that these features must have been retained when `as` was adapted for the
+PDP 11.
 
 The second version of `cat` is significantly simpler than the first. It is also
 more "Unix-y" in that it doesn't just expect a list of filename arguments—it
@@ -250,7 +253,7 @@ take an executable compiled today and run it on hardware a century from now.
 Perhaps advances in programming language design will also mean that nobody will
 understand C in the future and `cat` will have long since been rewritten in
 another language. (Though C has already been around for fifty years, and it
-doesn't look like it is about to be replaced any time soon.) But barring all 
+doesn't look like it is about to be replaced any time soon.) But barring all
 that, why not just keep using the `cat` we have forever?
 
 I think the history of `cat` shows that some ideas in computer science are in
