Fix typos in BSP article.

--- a/_posts/2019-11-06-doom-bsp.md
+++ b/_posts/2019-11-06-doom-bsp.md
@@ -207,7 +207,7 @@ complicated by the VSD problem:
 > One of the most significant problems that must be faced in the real-time
 > computation of images is the priority, or hidden-line, problem. In our
 > everyday visual perception of our surroundings, it is a problem that nature
-> solves with trivial east; a point of an opaque object obscures all other
+> solves with trivial ease; a point of an opaque object obscures all other
 > points that lie along the same line of sight and are more distant. In the
 > computer, the task is formidable. The computations required to resolve
 > priority in the general case grow exponentially with the complexity of the
@@ -267,7 +267,7 @@ You begin by picking one polygon in your scene and making the plane in which
 the polygon lies your partitioning plane. That one polygon also ends up as the
 root node in your tree. The remaining polygons in your scene will be on one
 side or the other of your root partitioning plane. The polygons on the
-"forward" side or in the "forward" half-space of your plane end in up in the
+"forward" side or in the "forward" half-space of your plane end up in the
 left subtree of your root node, while the polygons on the "back" side or in the
 "back" half-space of your plane end up in the right subtree. You then repeat
 this process recursively, picking a polygon from your left and right subtrees
