Add batkiz translations.

--- a/_posts/2018-12-18-rss.md
+++ b/_posts/2018-12-18-rss.md
@@ -12,6 +12,9 @@ excerpt: >
     different computer programs. Today, though RSS continues to power many
     applications on the web, it has become, for most people, an obscure
     technology.
+translations:
+    - language: 'Mandarin (Simplified)'
+      url: 'https://blog.batkiz.com/2018/10/09/translation-the-rise-and-demise-of-rss/'
 ---
 
 _This post was originally published on [September 16th, 2018]({% link
