Fix another typo in doom article.

--- a/_posts/2019-11-06-doom-bsp.md
+++ b/_posts/2019-11-06-doom-bsp.md
@@ -383,7 +383,7 @@ the static level geometry first, keeping track of the segments of the screen
 that were drawn to (with yet another memory-efficient data structure). It then
 draws the enemies in back-to-front order, clipping them against the segments of
 the screen that occlude them. This process is not as optimal as rendering using
-the BSP tree, but because there are usually fewer enemies visible then there is
+the BSP tree, but because there are usually fewer enemies visible than there is
 level geometry in a level, speed isn't as much of an issue here.
 
 Using BSP trees in _Doom_ was a major win. Obviously it is pretty neat that
