Fix typo in FOAF post.

--- a/_posts/2020-01-05-foaf.md
+++ b/_posts/2020-01-05-foaf.md
@@ -436,7 +436,7 @@ single person? Could I really write an application capable of resolving this
 conflict without involving (and inconveniencing) the user?
 
 Facebook, with its single database and lack of political qualms, could create a
-"planet-side system for identifying people" and so just gave every person a
+"planet-wide system for identifying people" and so just gave every person a
 unique Facebook ID. Problem solved.
 
 Complexity alone might not doom distributed social networks if people
