Fix outdated FOAF post excerpt.

--- a/_posts/2020-01-05-foaf.md
+++ b/_posts/2020-01-05-foaf.md
@@ -8,9 +8,9 @@ description: >
 excerpt: >
     The FOAF standard, or Friend of a Friend standard, is a now largely
     defunct/ignored/superseded web standard dating from the early 2000s that
-    hints at what social networking might have looked like in an alternate
-    universe. Before we talk about FOAF though, I want to talk about the New
-    York City Subway.
+    hints at what social networking might have looked like had Facebook not
+    conquered the world. Before we talk about FOAF though, I want to talk about
+    the New York City Subway.
 ---
 
 > _I express my network in a FOAF file, and that is the start of the revolution._
