Fix typo in BSP post.

--- a/_posts/2019-11-06-doom-bsp.md
+++ b/_posts/2019-11-06-doom-bsp.md
@@ -24,7 +24,7 @@ the development of _Doom_, Carmack realized that the 3D renderer he had written
 for the game slowed to a crawl when trying to render certain levels. This was
 unacceptable, because _Doom_ was supposed to be action-packed and frenetic. So
 Carmack, realizing the problem with his renderer was fundamental enough that he
-would need to find a better rendering algorithm, starting reading research
+would need to find a better rendering algorithm, started reading research
 papers. He eventually implemented a technique called "binary space
 partitioning," never before used in a video game, that dramatically sped up the
 _Doom_ engine.
