Add Russian translation of BBC micro article.

--- a/_posts/2019-03-31-bbc-micro.md
+++ b/_posts/2019-03-31-bbc-micro.md
@@ -5,6 +5,9 @@ year: 1982
 description: >
     In 1981, the BBC set out to educate Great Britain about computers. It did
     a really good job.
+translations:
+    - language: Russian
+      url: 'https://howtorecover.me/codecademy-protiv-bbc-micro'
 ---
 
 In the late 1970s, the computer, which for decades had been a mysterious,
