Add bit about VICE headquarters to maybe make the joke more obvious at the outset.

--- a/_posts/2020-02-02-bbs.md
+++ b/_posts/2020-02-02-bbs.md
@@ -12,7 +12,7 @@ any search engine, in forums that cannot be accessed without special passwords
 or protocols, criminals and terrorists meet to discuss conspiracy theories and
 trade child pornography.
 
-We have reported before on the dark web's ["hurtcore"
+We here at VICE headquarters have reported before on the dark web's ["hurtcore"
 communities](https://www.vice.com/en_us/article/mbxqqy/a-journey-into-the-worst-corners-of-the-dark-web),
 its [human trafficking
 markets](https://www.vice.com/en_us/article/vvbazy/my-brief-encounter-with-a-dark-web-human-trafficking-site),
