Tweak REST post description.

--- a/_posts/2020-06-28-rest.md
+++ b/_posts/2020-06-28-rest.md
@@ -3,7 +3,8 @@ title: Roy Fielding's Misappropriated REST Dissertation
 tags: ['Web', 'Papers']
 year: 2000
 description: >
-    What can we learn about REST APIs by reading the original REST proposal?
+    Can understanding where REST came from help us make sense of the term
+    "RESTful API"?
 ---
 
 RESTful APIs are everywhere. This is funny, because how many people really know
@@ -149,7 +150,7 @@ nothing good comes of it."[^7] The "enterprise people" wanted everything to be
 formally specified, but the get-shit-done crowd saw that as a waste of time.
 
 If the get-shit-done crowd wasn't going to use SOAP, they still needed some
-kind of standard way of doing things. Since everyone was using HTTP, and since
+standard way of doing things. Since everyone was using HTTP, and since
 everyone would keep using HTTP at least as a transport layer because of all the
 proxying and caching support, the simplest possible thing to do was just rely
 on HTTP's existing semantics. So that's what they did. They could have called
@@ -187,8 +188,9 @@ REST, especially considering that the "state transfer" in "Representational
 State Transfer" refers to navigating a state machine using hyperlinks between
 resources (and not, as many people seem to believe, to transferring resource
 state over the wire).[^8] But if you imagine that everyone is just building
-FIOH APIs and advertising them, with a nudge and a wink, as REST APIs, then of
-course HATEOAS is unimportant.
+FIOH APIs and advertising them, with a nudge and a wink, as REST APIs, or
+slightly more honestly as "RESTful" APIs, then of course HATEOAS is
+unimportant.
 
 Similarly, you might be surprised to know that there is nothing in Fielding's
 dissertation about which HTTP verb should map to which CRUD action, even though
