--- a/_posts/2020-06-28-rest.md
+++ b/_posts/2020-06-28-rest.md
@@ -3,8 +3,7 @@ title: Roy Fielding's Misappropriated REST Dissertation
 tags: ['Web', 'Papers']
 year: 2000
 description: >
-    Can understanding where REST came from help us make sense of the term
-    "RESTful API"?
+    Can history help us make sense of the term "RESTful API"?
 ---
 
 RESTful APIs are everywhere. This is funny, because how many people really know
