Use single quote in REST post description.

--- a/_posts/2020-06-28-rest.md
+++ b/_posts/2020-06-28-rest.md
@@ -2,8 +2,7 @@
 title: Roy Fielding's Misappropriated REST Dissertation
 tags: ['Web', 'Papers']
 year: 2000
-description: >
-    Can history help us make sense of the term "RESTful API"?
+description: Can history help us make sense of the term 'RESTful API'?
 ---
 
 RESTful APIs are everywhere. This is funny, because how many people really know
