Fix link to Fielding dissertation in footnotes.

--- a/_posts/2020-06-28-rest.md
+++ b/_posts/2020-06-28-rest.md
@@ -214,7 +214,7 @@ _Previously on TwoBitHistory..._
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">New post is up! I wrote about how to solve differential equations using an analog computer from the &#39;30s mostly made out of gears. As a bonus there&#39;s even some stuff in here about how to aim very large artillery pieces.<a href="https://t.co/fwswXymgZa">https://t.co/fwswXymgZa</a></p>&mdash; TwoBitHistory (@TwoBitHistory) <a href="https://twitter.com/TwoBitHistory/status/1247187881946275841?ref_src=twsrc%5Etfw">April 6, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-[^1]: Roy Fielding. "Architectural Styles and the Design of Network-based Software Architectures," 128. 2000. University of California, Irvine, PhD Dissertation, accessed June 28, 2020, <https://www.sciencedirect.com/science/article/pii/S0315086011000279>.
+[^1]: Roy Fielding. "Architectural Styles and the Design of Network-based Software Architectures," 128. 2000. University of California, Irvine, PhD Dissertation, accessed June 28, 2020, <https://www.ics.uci.edu/~fielding/pubs/dissertation/fielding_dissertation_2up.pdf>.
 [^2]: Fielding, 130.
 [^3]: Fielding distinguishes between software architectures and software architecture "styles." REST is an architectural style that has an instantiation in the architecture of HTTP.
 [^4]: Fielding, 2.
