Fix typo in Lisp article.

--- a/_posts/2018-10-14-lisp.md
+++ b/_posts/2018-10-14-lisp.md
@@ -92,7 +92,7 @@ working at the level of the computer's native instruction set, so they decided
 to create a language—or, as they called it, a "pseudo-code"—that would help
 them more naturally express the workings of their "Logic Theory Machine."[^5]
 Their language, called IPL for "Information Processing Language", was more of a
-high-level assembly dialect then a programming language in the sense we mean
+high-level assembly dialect than a programming language in the sense we mean
 today. Newell and Simon, perhaps referring to Fortran, noted that other
 "pseudo-codes" then in development were "preoccupied" with representing
 equations in standard mathematical notation.[^6] Their language focused instead
